--- a/css/stile.css
+++ b/css/stile.css
@@ -5,7 +5,7 @@ body {
 
 #div_play, #div_input, #div_settings {
     float: none;
-	width: 300px;
+	width: 100%;
 	text-align:	center;
 	margin-top:20px;
 	
